Updated overflow styles to overflowY to remove horizontal scrolling issues

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@ body {
   background: $color-dark;
   color: $color-light;
   font-family: 'Gibson', sans-serif;
+  overflow-x: hidden;
 }
 
 ::selection {
